resolved issues with contactbar and backButton at the bottom but am currently having issues with the project filter overlapping with the bottom of the page

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ header {
     transition: 0.6s;
     background: #1b242f;
     opacity: 0;
+    z-index: 100000;
 }
 
 /* (the css below is commented out because the global a css is overwriting this)
@@ -477,10 +478,13 @@ header.sticky {
     margin-right: 50px;
     margin-top: -5px;
     list-style: none;
+    min-height: 50px;
     height: 7vh;
     width: 50vw;
     min-width: 593px;
     text-align: center;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .project-filter li {
@@ -497,12 +501,14 @@ header.sticky {
     text-decoration: none;
     cursor: pointer;
     user-select: none;
+    overflow: hidden;
 }
 
 .project-filter-active {
     background-color: #e31b6d;
     color: white;
     transition: 0.3s;
+    overflow: hidden;
 }
 
 .project-container {
@@ -581,14 +587,14 @@ header.sticky {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: -75px;
-    padding-right: 3px;
-    margin-bottom: 30px;
     position: relative;
     background: #e31b6d;
     height: 60px;
     width: 50px;
     transition: 0.3s;
+    padding-right: 5px;
+    margin-left: 3px;
+    z-index: 1;
 }
 
 #backButton:hover {
@@ -608,12 +614,24 @@ header.sticky {
     justify-content: center;
     align-items: center;
     height: 20vh;
+    min-height: 200px;
     width: 100vw;
     background-color: #333;
     padding-top: 20px;
     font-size: 15px;
     font-family: 'Shippori Antique B1', sans-serif;
     /* color: #e31b6d; */
+    z-index: 2;
+}
+
+#contactBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background: green; */
+    height: 200px;
+    margin-top: -110px;
 }
 
 #iconcont {
@@ -622,8 +640,15 @@ header.sticky {
     text-align: center;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 15px;
+    margin-left: 9px;
     width: 250px;
     /* background: blue; */
+}
+
+#iconcont p {
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 #iconcont i { 
@@ -642,6 +667,10 @@ header.sticky {
     text-decoration: underline;
 }
 
+#footer {
+    margin-top: -5px;
+    margin-left: 5px;
+}
 
 /* Media Queries */
 
